# uav_ros_control

./: .gitignore  CMakeLists.txt  README.md  carrot_state_machine.smcat  nodelets.xml  package.xml
config/control/: PositionControlParameters.cfg  optitrack_position_control_duck.params.yaml  optitrack_position_control_falcon.params.yaml  optitrack_position_control_falcon_thrust.params.yaml  position_control.params.yaml  position_control_thrust.params.yaml  position_control_tilt.yaml
config/reference/: carrot_config.yaml  geofence_constraints.yaml
include/uav_ros_control/control/: CascadePID.hpp  ControlBase.hpp
include/uav_ros_control/reference/: CarrotReference.hpp  GeoFence.hpp  JoyControlInput.hpp
include/uav_ros_control/util/: uav_util.hpp
launch/: carrot_reference.launch  control_manager.launch  pid_carrot.launch  pid_carrot_carto.launch  pid_carrot_geo_fence.launch  pid_carrot_optitrack.launch  position_control.launch  uav_manager.launch
nodes/control/: PositionControlNode_rotor_tilt.cpp
nodes/reference/: CarrotReferenceNode.cpp
nodes/util/: uav_manager.cpp  uav_manager.hpp
src/control/: CascadePID.cpp  ControlBase.cpp
src/reference/: CarrotReference.cpp  GeoFence.cpp  JoyControlInput.cpp
src/util/: AutomaticTakeoff.cpp  uav_util.cpp
