<?xml version="1.0"?>
<package format="2">
  <name>uav_ros_control</name>
  <version>0.0.0</version>
  <description>Control algorithms used for "uav_ros_stack" package</description>
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>

  <build_depend>uav_ros_msgs</build_depend>
  <build_depend>uav_ros_lib</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>uav_ros_msgs</exec_depend>
  <exec_depend>uav_ros_lib</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <uav_ros_control plugin="${prefix}/plugins.xml"/>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
